# paraprof

./: .gitignore  BOBYQA_DOCUMENTATION_README.md  BOBYQA_INTEGRATION_DESIGN.md  BOBYQA_INTEGRATION_GUIDE.md  BOBYQA_JOB_SKELETON.py  BOBYQA_QUICKSTART.md  CHANGELOG.md  CLAUDE.md  CMAES_IMPLEMENTATION.md  COMPETITOR_ANALYSIS.md  COORDINATE_DESCENT_IMPLEMENTATION.md  LICENSE  MULTI_GP_REFINEMENT.md  NUISANCE_BUGFIX.md  NUISANCE_PARAMETERS.md  NUISANCE_QUICKSTART.md  PROFESSIONALIZATION_ROADMAP.md  PROJECTION_CONSTRAINTS.md  QUICK_REFERENCE_SCALABILITY.md  README.md  TEST_FUNCTIONS_SUMMARY.md  __init__.py  benchmark_cd_vs_lbfgsb.py  constants.py  interpolation.py  master.py  pyproject.toml  sampler.py  summary.md  test_108_MPI.py  test_2d_issue.py  test_bobyqa_simple.py  test_cd_refinement.py  test_cmaes.py  test_cmaes_activation.py  test_de_convergence_flags.py  test_direct_eval_mode.py  test_functions.py  test_global_pool.py  test_interpolation.py  (+12 more)
.claude/: phase1_completion_summary.md
.github/workflows/: tests.yml
GAMBIT_plugin/: README.md  gambit_paraprof.py  paraprof_example.yaml
benchmarks/: README.md  benchmark_suite.py  quick_scaling_check.sh  scaling_analysis.py  volume_sampling_benchmark.py  volume_vs_profile_benchmark.py
docs/: SCALABILITY_TESTING.md  algorithm_improvement_ideas.md  derived_projections_plan.md  volume_sampling_plan.md
examples/: analyze_secant_benchmark.py  ensemble_himmelblau_4d_full_summary.json  ensemble_himmelblau_4d_summary.json  ensemble_himmelblau_4d_w0_summary.json  ensemble_himmelblau_4d_w1_summary.json  ensemble_himmelblau_4d_w3_summary.json  ensemble_rosenbrock_4d_full_summary.json  ensemble_rosenbrock_4d_summary.json  ensemble_rosenbrock_4d_w0_summary.json  ensemble_rosenbrock_4d_w1_summary.json  ensemble_rosenbrock_4d_w3_summary.json  make_readme_animation.py  make_readme_animation_himmelblau_4D.py  make_readme_animation_rosenbrock.py  make_showcase_plots.py  plot_lnl_comparison.py  plot_lnl_histograms.py  plot_precond_rosenbrock.py  plot_three_way.py  plot_total_samples.py  plot_umbrella_vs_funnel.py  plot_window_sweep.py  run_allow_early_de_exit_benchmark.py  run_allow_early_de_exit_benchmark_driver.py  run_allow_early_de_exit_replicate_study.py  run_allow_skip_de_benchmark.py  run_allow_skip_de_benchmark_driver.py  run_allow_skip_de_replicate_study.py  run_continuation_benchmark.py  run_continuation_benchmark_driver.py  run_ensemble_walkers.py  run_himmelblau_1d.py  run_himmelblau_3d.py  run_himmelblau_4d.py  run_himmelblau_4d_advanced.py  run_himmelblau_4d_bobyqa.py  run_himmelblau_4d_simple.py  run_nuisance_example.py  run_pool_certificate_benchmark.py  run_pool_certificate_study.py  (+32 more)
examples/example_plots/showcase/: summary.json
examples/example_plots/showcase/data/: ackley_4d.json  ackley_4d.npz  griewank_4d.json  griewank_4d.npz  himmelblau_4d.json  himmelblau_4d.npz  levy_4d.json  levy_4d.npz  rosenbrock_4d.json  rosenbrock_4d.npz
jobs/: __init__.py  activation_job.py  base.py  de_job.py  lbfgsb_job.py
my_files/: test_38.py
plans/: user_gradients_plan.md
src/paraprof/: __init__.py  emulator_utils.py  exceptions.py  interpolation.py  local_surrogate.py  logger.py  master.py  mpi_simulator.py  nuisance_wrapper.py  phases.py  prediction_models.py  sample_io.py  sampler.py  speculation_manager.py  test_functions.py  visualization.py  volume.py  worker.py
src/paraprof/jobs/: __init__.py  activation_job.py  base.py  bobyqa_job.py  cd_job.py  cmaes_job.py  de_job.py  initial_points_job.py  lbfgsb_job.py  patching_test_job.py  pls_lhs_sampling_job.py  pool_certificate_job.py  suspect_recheck_job.py  volume_jobs.py
tests/: __init__.py  conftest.py  test_allow_early_de_exit.py  test_allow_skip_de.py  test_basin_detection.py  test_continuation_hooks.py  test_continuation_predictor.py  test_de_prescreening.py  test_emulator_refinement.py  test_emulator_utils.py  test_gambit_plugin.py  test_integration.py  test_interpolation.py  test_local_surrogate.py  test_nuisance_wrapper.py  test_phases.py  test_plugin_api.py  test_pool_certificate.py  test_sample_io.py  test_sampler.py  test_secant_predictor.py  test_smooth_certify.py  test_suspect_recheck.py  test_test_functions.py  test_user_gradients.py  test_volume.py  test_volume_stage.py
tools/: bench_user_gradients.py
